syntax = "proto3";

// User Service
//
// User Service API provides create, read, and read (many) access to a list of 
// users.
package pb;

import "google/api/annotations.proto";

message UserResp {
    int64 id = 1;
    string name = 2;
    int64 age = 3;
    string fortune = 4;
}

message NewUserReq {
    string name = 1;
    int64 age = 2;
}

message GetUserReq {
    int64 id = 1;
}

message UsersResp {
    repeated UserResp users = 1;
}

message GetUsersReq {
    int64 start = 1;
    int64 count = 2;
    bool desc = 3;
}

service UserService {
    rpc NewUser(NewUserReq) returns (UserResp) {
        option(google.api.http) = {
            post: "/v1/user"
            body: "*"
        };
    }

    rpc GetUser(GetUserReq) returns (UserResp) {
        option(google.api.http) = {
            get: "/v1/user/{id}"
        };
    }

    rpc GetUsers(GetUsersReq) returns (UsersResp) {
        option(google.api.http) = {
            get: "/v1/users"
        };
    }
}
